# ecommerce-ops-env-starter

./: .env.example  .gitignore  Dockerfile  README.md  TEAM_SPLIT.md  __init__.py  api-smoke.http  blog.md  client.py  ecommerce-ops-env-full-plan.md  environment.py  inference.py  models.py  openenv.yaml  pre_submission_validate.py  pyproject.toml  requirements.txt  reward.py  tasks.py  test_local.py  verifier.py
.github/workflows/: deploy.yml
context/: TESTING_PLAN.md  context.md
server/: app.py  ecommerce_environment.py  grader.py  reward.py  tasks.py
tests/: conftest.py  test_api_contract.py  test_env.py  test_graders.py  test_training.py
train/: diagnose.py  eval.py  grpo_train.ipynb  hf_train.ipynb  hf_train.py  hf_train_task3.py  metrics.py  run_hf_job.sh  smoke_test_api.py  submit_job.py
train/logs/: episodes.jsonl  eval_results.json  steps.jsonl
