[project]
name = "ecommerce-ops-env"
version = "0.1.0"
description = "OpenEnv-style e-commerce operations environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
